--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,6 +1,9 @@
 {% extends '_base.html' %}
+{% load static %}
+{% load i18n %}
 
 {% block content %}
+<body dir="rtl"
     <!-- Main Wrapper Start -->
     <div class="wrapper">
 
@@ -48,7 +51,7 @@
                                     </div>
                                     <button type="button" class="btn btn-small btn-bg-red btn-color-white btn-hover-2"
                                             onclick="window.location.href='cart.html'">
-                                        اضافه به سبد خرید
+                                        {% trans 'add to cart' %}
                                     </button>
                                 </div>
                                 <div class="product-footer-meta mt-5 pt-5">
@@ -147,20 +150,20 @@
                                     <div class="tab-pane fade" id="nav-reviews" role="tabpanel"
                                          aria-labelledby="nav-reviews-tab">
                                         <div class="product-reviews">
-                                            <h3 class="review__title">۱ نظر برای لباس تابستانی</h3>
+                                            <h3 class="review__title">{{ products.comments.count }} نظر برای {{ products.title }}</h3>
                                             <ul class="review__list">
+                                                {% for comment in products.comments.all %}
                                                 <li class="review__item">
                                                     <div class="review__container">
                                                         <div class="review__text">
                                                             <div class="d-flex flex-sm-row flex-row">
-                                                                <img src="assets/img/others/comment-1.jpg"
+                                                                <img src="{% static 'img/others/comment-1.jpg' %}"
                                                                      alt="Review Avatar" class="review__avatar">
                                                                 <div>
                                                                     <div class="review__meta">
-                                                                        <strong class="review__author px-4">علی
-                                                                            علوی</strong>
+                                                                        <strong class="review__author px-4"> {{ comment.author.username }}</strong>
                                                                         <span class="review__dash">-</span>
-                                                                        <span class="review__published-date">۱۲ مرداد ۱۴۰۱</span>
+                                                                        <span class="review__published-date">{{ comment.datetime_created }}</span>
                                                                     </div>
                                                                     <div class="product-rating">
                                                                         <div class="m-0 star-rating star-five">
@@ -171,50 +174,23 @@
                                                                 </div>
                                                             </div>
                                                             <p class="review__description text-right px-4">
-                                                                از خرید خودم راضی هستم. واقعا خیلی خوب بسته بندی شده بود
-                                                                و همینطور سر زمان رسید. واقعا نسبت به قیمت خیلی می ارزه.
+                                                           {{ comment.text  }}
                                                             </p>
                                                         </div>
                                                     </div>
                                                 </li>
+                                                {% endfor %}
                                             </ul>
                                             <div class="review-form-wrapper">
                                                 <div class="row">
                                                     <div class="border-top py-5 w-100"></div>
                                                     <div class="col-lg-8 m-auto">
-                                                        <span class="reply-title pull-right">نظر خود را بنویسید</span>
+                                                        <span class="reply-title pull-right">{% trans 'Write your comment' %}</span>
                                                         <br>
-                                                        <form action="#" class="form text-right">
-                                                            <div class="form-notes mb--20">
-                                                                <p class="my-3"><span class="required">*</span>ایمیل شما
-                                                                    برای دیگران نشان داده نمیشود.</p>
-                                                            </div>
-                                                            <div class="form__group mb--10">
-                                                                <label class="form__label d-block" for="email">متن نظر
-                                                                    شما<span class="required">*</span></label>
-                                                                <textarea name="review" id="review"
-                                                                          class="form__input form__input--textarea"></textarea>
-                                                            </div>
-                                                            <div class="form__group mb--20">
-                                                                <label class="form__label d-block" for="name">نام
-                                                                    شما<span class="required">*</span></label>
-                                                                <input type="text" name="name" id="name"
-                                                                       class="form__input">
-                                                            </div>
-                                                            <div class="form__group mb--20">
-                                                                <label class="form__label d-block" for="email">ایمیل شما<span
-                                                                        class="required">*</span></label>
-                                                                <input type="email" name="email" id="email"
-                                                                       class="form__input">
-                                                            </div>
-                                                            <div class="form__group">
-                                                                <div class="form-row">
-                                                                    <div class="col-12">
-                                                                        <input type="submit" value="ارسال"
-                                                                               class="btn-submit">
-                                                                    </div>
-                                                                </div>
-                                                            </div>
+                                                        <form action="{% url 'comment_create' products.id %}" method="POST">
+                                                        {% csrf_token %}
+                                                            {{ comment_form.as_p }}
+                                                            <input type="submit" value="{% trans 'send' %}">
                                                         </form>
                                                     </div>
                                                 </div>
@@ -401,7 +377,7 @@
                                     </div>
                                     <div class="product-rating d-flex mb--20">
                                         <div class="star-rating star-three">
-                                            <span>Rated <strong class="rating">5.00</strong> out of 5</span>
+                                            <span>Rated <strong class="rating">{{ products.stars }}</strong> out of 5</span>
                                         </div>
                                     </div>
                                     <h3 class="product-title mb--20">لباس تابستانی</h3>
@@ -507,5 +483,6 @@
         </div>
         <!-- Qicuk View Modal End -->
     </div>
-    <!-- Main Wrapper End -->
+
+ </body>   <!-- Main Wrapper End -->
 {% endblock %}
